[package]
name = "whatsup-lite"
version = "0.1.1"
description = "A lightweight WhatsApp Web desktop wrapper"
authors = ["WhatsUp Lite contributors"]
edition = "2021"

[lib]
name = "whatsup_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
